Fix Bug 1692539: Implementing dark background on hover for all panels (#1872)
Also: Delete extra padding in the Locales tab

--- a/frontend/src/modules/entitieslist/components/Entity.css
+++ b/frontend/src/modules/entitieslist/components/Entity.css
@@ -14,7 +14,7 @@
 .entity.checked,
 .entity.selected,
 .entity:hover {
-    background-color: #4d5967;
+    background-color: #333941;
 }
 
 .entity > div {
