--- a/frontend/src/modules/history/components/Translation.css
+++ b/frontend/src/modules/history/components/Translation.css
@@ -13,7 +13,7 @@
 }
 
 .history .translation:not(.cannot-copy):hover {
-    background: #4d5967;
+    background: #333941;
 }
 
 .history .translation .user-avatar {
