--- a/frontend/src/modules/machinery/components/Translation.css
+++ b/frontend/src/modules/machinery/components/Translation.css
@@ -10,7 +10,7 @@
 
 .machinery .translation:not(.cannot-copy):hover,
 .machinery .translation.selected {
-    background: #4d5967;
+    background: #333941;
 }
 
 .machinery .translation > header {
